FIX overflowing text in display

--- a/styles.css
+++ b/styles.css
@@ -148,10 +148,12 @@ input {
     justify-content: flex-end;
     align-items: center;
     font-size: var(--fs-largest);
-    height: 100px;
+    height: fit-content;
     padding: var(--spc-large);
     margin: var(--spc-large) 0;
     border-radius: var(--br-small);
+    max-width: 50vw;
+    word-break: break-all;
 }
 
 .keypad {
